<resources>
    <string name="app_name">Movie World</string>
    <string name="edit_movie">Edit Movie:</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="are_you_sure">Are you sure you want to delete this movie?</string>
    <string name="yes">Yes</string>
    <string name="movie_deleted">Movie deleted</string>
    <string name="no">No</string>
    <string name="movie_not_deleted">Movie not deleted</string>
    <string name="swipe_for_delete_a_movie_click_for_more_details">
    Swipe to delete a movie, click for more details.
</string>
    <string name="dismiss">CONFIRM</string>
    <string name="are_you_sure_you_want_to_delete_all">"Are you sure you want to delete all? "</string>
    <string name="movies_deleted">Movies deleted</string>
    <string name="delete_all">Delete all</string>
    <string name="more_information">More information</string>
    <string name="welcome_to_movie_world_app">Welcome to Movie World!</string>
    <string name="search_for_a_movie">Search for a Movie...</string>
    <string name="add_new_item">Add New Movie</string>
    <string name="add_new_movie">Add New Movie:</string>
    <string name="enter_movie_name">Enter movie name</string>
    <string name="enter_director_name">Enter director`s name (First and Last)</string>
    <string name="enter_youtube_link">Enter youtube trailer link (optional)</string>
    <string name="enter_writer_name">Enter writer`s name (First and Last)</string>
    <string name="enter_main_stars">Enter main stars (each name in different line)</string>
    <string name="enter_release_year">Enter release year (Between 1900 and nowadays)</string>
    <string name="enter_movie_description">Enter movie Description</string>
    <string name="select_poster">Select poster</string>
    <string name="save_movie">Save movie</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="fantasy">Fantasy</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="horror">Horror</string>
    <string name="romantic">Romantic</string>
    <string name="documentary">Documentary</string>
    <string name="musical">Musical</string>
    <string name="other">Other</string>
    <string name="alert_enter_movie_name">Enter movie name</string>
    <string name="alert_select_genre">Select genre</string>
    <string name="alert_director_properly">Enter director\'s name properly</string>
    <string name="alert_writer_properly">Enter writer\'s name properly</string>
    <string name="alert_year_4_digits">Enter year with 4 digits only</string>
    <string name="alert_year_between">Year must be between 1900-nowadays</string>
    <string name="alert_valid_year">Enter a valid year</string>
    <string name="alert_movie_description">Enter movie description</string>
    <string name="alert_select_poster">Select poster</string>
    <string name="enter_stars_names">Enter stars names</string>
    <string name="enter_stars_names_properly">Enter stars names properly</string>
    <string name="content_description_sIcon">Search icon</string>
    <string name="content_description_background">Background</string>
    <string name="card_background_desc">Card Background</string>
    <string name="item_image_desc">Item image</string>
    <string name="movie_name_desc">Movie Name</string>
    <string name="movie_genre_desc">Genre: Action</string>
    <string name="movie_year_desc">Year: 2023</string>
    <string name="edit_button_desc">Edit movie details</string>



<!--detail movie-->

    <string name="movie_genre"><![CDATA[<b>Genre:</b><br>%s]]></string>
    <string name="movie_director"><![CDATA[<b>Director:</b><br>%s]]></string>
    <string name="movie_writer"><![CDATA[<b>Writer:</b><br>%s]]></string>
    <string name="movie_stars"><![CDATA[<b>Stars:</b><br>%s]]></string>
    <string name="movie_release_year"><![CDATA[<b>Release Year:</b><br>%d]]></string>

    <string name="movie_title_hint">Title</string>
    <string name="movie_genre_hint">Genre:</string>
    <string name="movie_director_hint">Director:</string>
    <string name="movie_writer_hint">Writer:</string>
    <string name="movie_stars_hint">Stars:</string>
    <string name="movie_release_year_hint">Release year:</string>
    <string name="movie_description_hint">Description:</string>
    <string name="movie_image_hint">Movie image:</string>


    <string-array name="movie_genres">
        <item>Action</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Sci-Fi</item>
        <item>Horror</item>
        <item>Romantic</item>
        <item>Documentary</item>
        <item>Musical</item>
        <item>All</item>
    </string-array>


</resources>