<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/logo_dark_black_bg_phone"
    tools:context=".ui.single_character.DetailMovieFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_background"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_title"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:layout_margin="20dp"
                    android:hint="@string/movie_title_hint"
                    android:textStyle="bold" />

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_marginTop="5dp"
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingClass" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_genre"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:hint="@string/movie_genre_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_director"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:hint="@string/movie_director_hint"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_writer"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:hint="@string/movie_writer_hint"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_stars"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:hint="@string/movie_stars_hint"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_release"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    android:hint="@string/movie_release_year_hint"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_description"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:layout_margin="20dp"
                    android:textStyle="italic"
                    android:hint="@string/movie_description_hint"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_image"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/movie_image_hint"
                    android:minHeight="200dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
